--- a/thesis/front/acronyms.tex
+++ b/thesis/front/acronyms.tex
@@ -67,6 +67,8 @@ NIR - Near Infra-Red
 
 QSO - Quasi-Stellar Object (Quasar)
 
+SCUBA - Sub-millimetre Common-User Bolometer Array
+
 SED - Spectral Energy Distribution
 
 SN(e) - Supernova(e)
