--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,18 @@
+@ARTICLE{Baron1993,
+   author = {{Baron}, E. and {Hauschildt}, P.~H. and {Branch}, D. and {Wagner}, R.~M. and 
+	{Austin}, S.~J. and {Filippenko}, A.~V. and {Matheson}, T.},
+    title = "{Interpretation of the Early Spectra of SN 1993J in M81}",
+  journal = {\apjl},
+ keywords = {STARS: SUPERNOVAE: INDIVIDUAL ALPHANUMERIC: SN 1993J},
+     year = 1993,
+    month = oct,
+   volume = 416,
+    pages = {L21},
+      doi = {10.1086/187061},
+   adsurl = {http://adsabs.harvard.edu/abs/1993ApJ...416L..21B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Barlow1977,
    author = {{Barlow}, M.~J. and {Silk}, J.},
     title = "{Sputtering in interstellar shocks - A model for heavy element depletion}",
