--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -231,16 +231,17 @@
 %%---------------------------------------------------------
 
 %% Do the title page: Personal info for title page
-\university{\vspace{1cm}\huge University College London}
-\faculty{\Large Faculty of Mathematics and Physical Sciences}
+\university{ University College London}
+%\faculty{%\Large Faculty of Mathematics and Physical Sciences 
+%fa}
 \department{Department of Physics \& Astronomy}  
-\thesistitle{\vspace{0.8cm} Dust-Affected Models of Characteristic Line Emission in Supernovae}
-\thesisauthor{\LARGE ANTONIA BEVAN \vspace{0.8cm}}
+\thesistitle{Dust-Affected Models of Characteristic Line Emission in Supernovae}
+\thesisauthor{\huge Antonia Bevan \vspace{0.8cm}}
 \dedication{\it{In loving memory of Molly and Bill Siddle.}} 
-\supervisorone{Prof. Michael J. Barlow}
-\examinerone{Dr Kenneth Wood}
-\supervisortwo{Dr Jeremy A. Yates}
-\examinertwo{Prof. Ian D. Howarth}
+%\supervisorone{Prof. Michael J. Barlow}
+%\examinerone{Dr Kenneth Wood}
+%\supervisortwo{Dr Jeremy A. Yates}
+%\examinertwo{Prof. Ian D. Howarth}
 
 \maketitle 
 
