updates to ch 5

--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,77 @@
+@ARTICLE{Biscaro2014,
+   author = {{Biscaro}, C. and {Cherchneff}, I.},
+    title = "{Molecules and dust in Cassiopeia A. I. Synthesis in the supernova phase and processing by the reverse shock in the clumpy remnant}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1401.5594},
+ primaryClass = "astro-ph.SR",
+ keywords = {astrochemistry, molecular processes, ISM: supernova remnants, circumstellar matter, supernovae: general, dust, extinction},
+     year = 2014,
+    month = apr,
+   volume = 564,
+      eid = {A25},
+    pages = {A25},
+      doi = {10.1051/0004-6361/201322932},
+   adsurl = {http://adsabs.harvard.edu/abs/2014A\%26A...564A..25B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Zeippen1987,
+   author = {{Zeippen}, C.~J.},
+    title = "{Improved radiative transition probabilities for O II forbidden lines}",
+  journal = {\aap},
+ keywords = {Forbidden Bands, Line Spectra, Oxygen Spectra, Radiative Transfer, Transition Probabilities, Atomic Energy Levels, Computational Astrophysics, Computer Programs, Magnetic Dipoles},
+     year = 1987,
+    month = feb,
+   volume = 173,
+    pages = {410-414},
+   adsurl = {http://adsabs.harvard.edu/abs/1987A\%26A...173..410Z},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Arendt2014,
+   author = {{Arendt}, R.~G. and {Dwek}, E. and {Kober}, G. and {Rho}, J. and 
+	{Hwang}, U.},
+    title = "{Interstellar and Ejecta Dust in the Cas A Supernova Remnant}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1403.3008},
+ keywords = {dust, extinction, infrared: ISM, ISM: individual objects: Cassiopeia A, ISM: supernova remnants},
+     year = 2014,
+    month = may,
+   volume = 786,
+      eid = {55},
+    pages = {55},
+      doi = {10.1088/0004-637X/786/1/55},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...786...55A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Rest2011,
+   author = {{Rest}, A. and {Foley}, R.~J. and {Sinnott}, B. and {Welch}, D.~L. and 
+	{Badenes}, C. and {Filippenko}, A.~V. and {Bergmann}, M. and 
+	{Bhatti}, W.~A. and {Blondin}, S. and {Challis}, P. and {Damke}, G. and 
+	{Finley}, H. and {Huber}, M.~E. and {Kasen}, D. and {Kirshner}, R.~P. and 
+	{Matheson}, T. and {Mazzali}, P. and {Minniti}, D. and {Nakajima}, R. and 
+	{Narayan}, G. and {Olsen}, K. and {Sauer}, D. and {Smith}, R.~C. and 
+	{Suntzeff}, N.~B.},
+    title = "{Direct Confirmation of the Asymmetry of the Cas A Supernova with Light Echoes}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1003.5660},
+ primaryClass = "astro-ph.SR",
+ keywords = {ISM: individual objects: Cas A, ISM: supernova remnants, supernovae: general},
+     year = 2011,
+    month = may,
+   volume = 732,
+      eid = {3},
+    pages = {3},
+      doi = {10.1088/0004-637X/732/1/3},
+   adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...732....3R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Baron1993,
    author = {{Baron}, E. and {Hauschildt}, P.~H. and {Branch}, D. and {Wagner}, R.~M. and 
 	{Austin}, S.~J. and {Filippenko}, A.~V. and {Matheson}, T.},
