--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -112,6 +112,8 @@
 \usepackage{booktabs}
 
 \usepackage{bm}
+
+\usepackage{tabulary}
 % Load in the hacked caption stuff
 \usepackage{hackcaption}
 
