--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,75 @@
+@ARTICLE{Woosley2010,
+   author = {{Woosley}, S.~E.},
+    title = "{Bright Supernovae from Magnetar Birth}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {0911.0698},
+ primaryClass = "astro-ph.HE",
+ keywords = {hydrodynamics, shock waves, supernovae: general, turbulence},
+     year = 2010,
+    month = aug,
+   volume = 719,
+    pages = {L204-L207},
+      doi = {10.1088/2041-8205/719/2/L204},
+   adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...719L.204W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{Patnaude2001,
+   author = {{Patnaude}, D.~J. and {Fesen}, R.~A. and {Raymond}, J.~C. and 
+	{Levenson}, N.~A. and {Graham}, J.~R.},
+    title = "{An Isolated, Shocked ISM Cloud in the Cygnus Loop SNR}",
+booktitle = {American Astronomical Society Meeting Abstracts},
+     year = 2001,
+   series = {Bulletin of the American Astronomical Society},
+   volume = 33,
+    month = dec,
+    pages = {126},
+   adsurl = {http://adsabs.harvard.edu/abs/2001AAS...19912611P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@INPROCEEDINGS{Kirshner1990,
+   author = {{Kirshner}, R.~P.},
+    title = "{Supernova light curves.}",
+ keywords = {Supernovae: Light Curves, Supernovae: Cosmology, Supernova 1987A in LMC},
+booktitle = {Supernovae},
+     year = 1990,
+   editor = {{Petschek}, A.~G.},
+    pages = {59-75},
+   adsurl = {http://adsabs.harvard.edu/abs/1990supe.conf...59K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Fesen2006a,
+   author = {{Fesen}, R.~A. and {Pavlov}, G.~G. and {Sanwal}, D.},
+    title = "{Near-Infrared and Optical Limits for the Central X-Ray Point Source in the Cassiopeia A Supernova Remnant}",
+  journal = {\apj},
+   eprint = {astro-ph/0509552},
+ keywords = {ISM: Individual: Name: Cassiopeia A, Stars: Neutron, ISM: Supernova Remnants, X-Rays: Stars},
+     year = 2006,
+    month = jan,
+   volume = 636,
+    pages = {848-858},
+      doi = {10.1086/498087},
+   adsurl = {http://adsabs.harvard.edu/abs/2006ApJ...636..848F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Milisavljevic2013,
+  author={Dan Milisavljevic and Robert A. Fesen},
+  title={A Detailed Kinematic Map of Cassiopeia A's Optical Main Shell and Outer High-velocity Ejecta},
+  journal={The Astrophysical Journal},
+  volume={772},
+  number={2},
+  pages={134},
+  url={http://stacks.iop.org/0004-637X/772/i=2/a=134},
+  year={2013}
+}
+
+
 @ARTICLE{Biscaro2014,
    author = {{Biscaro}, C. and {Cherchneff}, I.},
     title = "{Molecules and dust in Cassiopeia A. I. Synthesis in the supernova phase and processing by the reverse shock in the clumpy remnant}",
