--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,149 @@
+@ARTICLE{Dwek2004,
+   author = {{Dwek}, E.},
+    title = "{The Detection of Cold Dust in Cassiopeia A: Evidence for the Formation of Metallic Needles in the Ejecta}",
+  journal = {\apj},
+   eprint = {astro-ph/0401074},
+ keywords = {ISM: Dust, Extinction, Infrared: ISM, ISM: Individual: Name: Cassiopeia A, ISM: Supernova Remnants},
+     year = 2004,
+    month = jun,
+   volume = 607,
+    pages = {848-854},
+      doi = {10.1086/382653},
+   adsurl = {http://adsabs.harvard.edu/abs/2004ApJ...607..848D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Arendt1999,
+   author = {{Arendt}, R.~G. and {Dwek}, E. and {Moseley}, S.~H.},
+    title = "{Newly Synthesized Elements and Pristine Dust in the Cassiopeia A Supernova Remnant}",
+  journal = {\apj},
+   eprint = {astro-ph/9901042},
+ keywords = {ISM: DUST, EXTINCTION, INFRARED: ISM: CONTINUUM, INFRARED: ISM: LINES AND BANDS, ISM: INDIVIDUAL (CASSIOPEIA A), ISM: SUPERNOVA REMNANTS, ISM: Dust, Extinction, Infrared: ISM: Continuum, Infrared: ISM: Lines and Bands, ISM: individual (Cassiopeia A), ISM: Supernova Remnants},
+     year = 1999,
+    month = aug,
+   volume = 521,
+    pages = {234-245},
+      doi = {10.1086/307545},
+   adsurl = {http://adsabs.harvard.edu/abs/1999ApJ...521..234A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{DeLaney2010,
+  author={Tracey DeLaney and Lawrence Rudnick and M. D. Stage and J. D. Smith and Karl Isensee and Jeonghee Rho and Glenn E.
+Allen and Haley Gomez and Takashi Kozasa and William T. Reach and J. E. Davis and J. C. Houck},
+  title={The Three-dimensional Structure of Cassiopeia A},
+  journal={The Astrophysical Journal},
+  volume={725},
+  number={2},
+  pages={2038},
+  url={http://stacks.iop.org/0004-637X/725/i=2/a=2038},
+  year={2010},
+}
+
+@ARTICLE{Hurford1996,
+   author = {{Hurford}, A.~P. and {Fesen}, R.~A.},
+    title = "{Reddening Measurements and Physical Conditions for Cassiopeia A from Optical and Near-Infrared Spectra}",
+  journal = {\apj},
+ keywords = {ISM: INDIVIDUAL NAME: CASSIOPEIA A, ISM: SUPERNOVA REMNANTS, ISM: DUST, EXTINCTION, ISM: STRUCTURE},
+     year = 1996,
+    month = sep,
+   volume = 469,
+    pages = {246},
+      doi = {10.1086/177775},
+   adsurl = {http://adsabs.harvard.edu/abs/1996ApJ...469..246H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Nozawa2010,
+   author = {{Nozawa}, T. and {Kozasa}, T. and {Tominaga}, N. and {Maeda}, K. and 
+	{Umeda}, H. and {Nomoto}, K. and {Krause}, O.},
+    title = "{Formation and Evolution of Dust in Type IIb Supernovae with Application to the Cassiopeia A Supernova Remnant}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0909.4145},
+ primaryClass = "astro-ph.SR",
+ keywords = {dust, extinction, infrared: ISM, ISM: supernova remnants, shock waves, supernovae: general, supernovae: individual: Cassiopeia A},
+     year = 2010,
+    month = apr,
+   volume = 713,
+    pages = {356-373},
+      doi = {10.1088/0004-637X/713/1/356},
+   adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...713..356N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Reed1995,
+   author = {{Reed}, J.~E. and {Hester}, J.~J. and {Fabian}, A.~C. and {Winkler}, P.~F.
+	},
+    title = "{The Three-dimensional Structure of the Cassiopeia A Supernova Remnant. I. The Spherical Shell}",
+  journal = {\apj},
+ keywords = {ISM: STRUCTURE, ISM: INDIVIDUAL NAME: CASSIOPEIA A, ISM: KINEMATICS AND DYNAMICS, ISM: SUPERNOVA REMNANTS},
+     year = 1995,
+    month = feb,
+   volume = 440,
+    pages = {706},
+      doi = {10.1086/175308},
+   adsurl = {http://adsabs.harvard.edu/abs/1995ApJ...440..706R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Fesen2006,
+   author = {{Fesen}, R.~A. and {Hammell}, M.~C. and {Morse}, J. and {Chevalier}, R.~A. and 
+	{Borkowski}, K.~J. and {Dopita}, M.~A. and {Gerardy}, C.~L. and 
+	{Lawrence}, S.~S. and {Raymond}, J.~C. and {van den Bergh}, S.
+	},
+    title = "{The Expansion Asymmetry and Age of the Cassiopeia A Supernova Remnant}",
+  journal = {\apj},
+   eprint = {astro-ph/0603371},
+ keywords = {ISM: Individual: Name: Cassiopeia A, ISM: Kinematics and Dynamics, ISM: Supernova Remnants},
+     year = 2006,
+    month = jul,
+   volume = 645,
+    pages = {283-292},
+      doi = {10.1086/504254},
+   adsurl = {http://adsabs.harvard.edu/abs/2006ApJ...645..283F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Taylor1950,
+   author = {{Taylor}, G.},
+    title = "{The Formation of a Blast Wave by a Very Intense Explosion. I. Theoretical Discussion}",
+  journal = {Proceedings of the Royal Society of London Series A},
+     year = 1950,
+    month = mar,
+   volume = 201,
+    pages = {159-174},
+      doi = {10.1098/rspa.1950.0049},
+   adsurl = {http://adsabs.harvard.edu/abs/1950RSPSA.201..159T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@BOOK{Sedov1959,
+   author = {{Sedov}, L.~I.},
+    title = "{Similarity and Dimensional Methods in Mechanics}",
+booktitle = {Similarity and Dimensional Methods in Mechanics, New York: Academic Press, 1959},
+     year = 1959,
+   adsurl = {http://adsabs.harvard.edu/abs/1959sdmm.book.....S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Weingartner2001,
+   author = {{Weingartner}, J.~C. and {Draine}, B.~T.},
+    title = "{Dust Grain-Size Distributions and Extinction in the Milky Way, Large Magellanic Cloud, and Small Magellanic Cloud}",
+  journal = {\apj},
+   eprint = {astro-ph/0008146},
+ keywords = {ISM: Dust, Extinction, ISM: Clouds},
+     year = 2001,
+    month = feb,
+   volume = 548,
+    pages = {296-309},
+      doi = {10.1086/318651},
+   adsurl = {http://adsabs.harvard.edu/abs/2001ApJ...548..296W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Woosley2010,
    author = {{Woosley}, S.~E.},
     title = "{Bright Supernovae from Magnetar Birth}",
