--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -122,7 +122,7 @@
 
 % % PDF hyperlinks, with coloured links 
 % % (watch for {\it ...} usage - swap to \textit{...})
-% \usepackage[pdftex,bookmarks,colorlinks,breaklinks,backref]{hyperref}
+% \usepackage[pdftex,bookmarks,colorltinks,breaklinks,backref]{hyperref}
 % \hypersetup{linkcolor=red,citecolor=blue} % coloured links
 % %\hypersetup{linkcolor=black,citecolor=black} % black links, for printed output
 
