--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,162 @@
+@ARTICLE{Nomoto1993,
+   author = {{Nomoto}, K. and {Suzuki}, T. and {Shigeyama}, T. and {Kumagai}, S. and 
+	{Yamaoka}, H. and {Saio}, H.},
+    title = "{A type IIb model for supernova 1993J}",
+  journal = {\nat},
+ keywords = {Astronomical Models, Light Curve, Line Spectra, Stellar Spectra, Supernovae, Asymptotic Giant Branch Stars, B Stars, Binary Stars, Hydrogen, Stellar Envelopes, Stellar Spectrophotometry, Supergiant Stars},
+     year = 1993,
+    month = aug,
+   volume = 364,
+    pages = {507-509},
+      doi = {10.1038/364507a0},
+   adsurl = {http://adsabs.harvard.edu/abs/1993Natur.364..507N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Houck1996,
+   author = {{Houck}, J.~C. and {Fransson}, C.},
+    title = "{Analysis of the Late Optical Spectra of SN 1993J}",
+  journal = {\apj},
+ keywords = {STARS: INTERIORS, STARS: SUPERNOVAE: INDIVIDUAL ALPHANUMERIC: SN 1993J},
+     year = 1996,
+    month = jan,
+   volume = 456,
+    pages = {811},
+      doi = {10.1086/176699},
+   adsurl = {http://adsabs.harvard.edu/abs/1996ApJ...456..811H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Fransson2005,
+   author = {{Fransson}, C. and {Challis}, P.~M. and {Chevalier}, R.~A. and 
+	{Filippenko}, A.~V. and {Kirshner}, R.~P. and {Kozma}, C. and 
+	{Leonard}, D.~C. and {Matheson}, T. and {Baron}, E. and {Garnavich}, P. and 
+	{Jha}, S. and {Leibundgut}, B. and {Lundqvist}, P. and {Pun}, C.~S.~J. and 
+	{Wang}, L. and {Wheeler}, J.~C.},
+    title = "{Hubble Space Telescope and Ground-based Observations of SN 1993J and SN 1998S: CNO Processing in the Progenitors}",
+  journal = {\apj},
+   eprint = {astro-ph/0409439},
+ keywords = {Stars: Circumstellar Matter, Nuclear Reactions, Nucleosynthesis, Abundances, Stars: Evolution, Stars: Mass Loss, Stars: Supernovae: Individual: Alphanumeric: SN 1993J, Stars: Supernovae: Individual: Alphanumeric: SN 1998S},
+     year = 2005,
+    month = apr,
+   volume = 622,
+    pages = {991-1007},
+      doi = {10.1086/426495},
+   adsurl = {http://adsabs.harvard.edu/abs/2005ApJ...622..991F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Matheson2000a,
+   author = {{Matheson}, T. and {Filippenko}, A.~V. and {Barth}, A.~J. and 
+	{Ho}, L.~C. and {Leonard}, D.~C. and {Bershady}, M.~A. and {Davis}, M. and 
+	{Finley}, D.~S. and {Fisher}, D. and {Gonz{\'a}lez}, R.~A. and 
+	{Hawley}, S.~L. and {Koo}, D.~C. and {Li}, W. and {Lonsdale}, C.~J. and 
+	{Schlegel}, D. and {Smith}, H.~E. and {Spinrad}, H. and {Wirth}, G.~D.
+	},
+    title = "{Optical Spectroscopy of Supernova 1993J During Its First 2500 Days}",
+  journal = {\aj},
+   eprint = {astro-ph/0006263},
+ keywords = {Stars: Binaries: Close, Stars: Evolution, Stars: Mass Loss, Stars: Supernovae: General, supernovae: individual (SN 1993J)},
+     year = 2000,
+    month = sep,
+   volume = 120,
+    pages = {1487-1498},
+      doi = {10.1086/301518},
+   adsurl = {http://adsabs.harvard.edu/abs/2000AJ....120.1487M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Matheson2000b,
+   author = {{Matheson}, T. and {Filippenko}, A.~V. and {Ho}, L.~C. and {Barth}, A.~J. and 
+	{Leonard}, D.~C.},
+    title = "{Detailed Analysis of Early to Late-Time Spectra of Supernova 1993J}",
+  journal = {\aj},
+   eprint = {astro-ph/0006264},
+ keywords = {Stars: Circumstellar Matter, Stars: Mass Loss, Stars: Supernovae: General, Stars: Supernovae: Individual: Alphanumeric: SN 1993J, Techniques: Spectroscopic},
+     year = 2000,
+    month = sep,
+   volume = 120,
+    pages = {1499-1515},
+      doi = {10.1086/301519},
+   adsurl = {http://adsabs.harvard.edu/abs/2000AJ....120.1499M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{Wheeler1996,
+   author = {{Wheeler}, J.~C. and {Filippenko}, A.~V.},
+    title = "{Review of Contributions to the Workshop on SN 1993J}",
+booktitle = {IAU Colloq. 145: Supernovae and Supernova Remnants},
+     year = 1996,
+   editor = {{Kuhn}, T.~S.},
+    pages = {241},
+   adsurl = {http://adsabs.harvard.edu/abs/1996ssr..conf..241W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@INPROCEEDINGS{Garnavich1993,
+   author = {{Garnavich}, P.~M. and {Ann}, H.~B.},
+    title = "{Early Spectra of SN 1993J in M81}",
+booktitle = {American Astronomical Society Meeting Abstracts \#182},
+     year = 1993,
+   series = {Bulletin of the American Astronomical Society},
+   volume = 25,
+    month = jun,
+    pages = {1244},
+   adsurl = {http://adsabs.harvard.edu/abs/1993AAS...182.8302G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Fillipenko1993,
+   author = {{Filippenko}, A.~V. and {Matheson}, T. and {Ho}, L.~C.},
+    title = "{The ``Type IIb'' Supernova 1993J in M81: A Close Relative of Type Ib Supernovae}",
+  journal = {\apjl},
+     year = 1993,
+    month = oct,
+   volume = 415,
+    pages = {L103},
+      doi = {10.1086/187043},
+   adsurl = {http://adsabs.harvard.edu/abs/1993ApJ...415L.103F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Ripero1993,
+   author = {{Ripero}, J. and {Garcia}, F. and {Rodriguez}, D. and {Pujol}, P. and 
+	{Filippenko}, A.~V. and {Treffers}, R.~R. and {Paik}, Y. and 
+	{Davis}, M. and {Schlegel}, D. and {Hartwick}, F.~D.~A. and 
+	{Balam}, D.~D. and {Zurek}, D. and {Robb}, R.~M. and {Garnavich}, P. and 
+	{Hong}, B.~A.},
+    title = "{Supernova 1993J in NGC 3031}",
+  journal = {IAU Circ.},
+     year = 1993,
+    month = mar,
+   volume = 5731,
+    pages = {1},
+   adsurl = {http://adsabs.harvard.edu/abs/1993IAUC.5731....1R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Freedman1994,
+   author = {{Freedman}, W.~L. and {Hughes}, S.~M. and {Madore}, B.~F. and 
+	{Mould}, J.~R. and {Lee}, M.~G. and {Stetson}, P. and {Kennicutt}, R.~C. and 
+	{Turner}, A. and {Ferrarese}, L. and {Ford}, H. and {Graham}, J.~A. and 
+	{Hill}, R. and {Hoessel}, J.~G. and {Huchra}, J. and {Illingworth}, G.~D.
+	},
+    title = "{The Hubble Space Telescope Extragalactic Distance Scale Key Project. 1: The discovery of Cepheids and a new distance to M81}",
+  journal = {\apj},
+ keywords = {Astrometry, Astronomical Photometry, Calibrating, Cepheid Variables, Distance, Scale (Ratio), Spiral Galaxies, Data Reduction, Data Sampling, Hubble Constant, Hubble Space Telescope, Interstellar Extinction, Red Shift, Stellar Luminosity, Stellar Magnitude},
+     year = 1994,
+    month = jun,
+   volume = 427,
+    pages = {628-655},
+      doi = {10.1086/174172},
+   adsurl = {http://adsabs.harvard.edu/abs/1994ApJ...427..628F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Dwek2004,
    author = {{Dwek}, E.},
     title = "{The Detection of Cold Dust in Cassiopeia A: Evidence for the Formation of Metallic Needles in the Ejecta}",
