ch 6 updates - no major to do's left - proof-read and give to mike

--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,205 @@
+
+@ARTICLE{Chugai1994,
+   author = {{Chugai}, N.~N. and {Danziger}, I.~J.},
+    title = "{Supernova 1988Z - Low-Mass Ejecta Colliding with the Clumpy Wind}",
+  journal = {\mnras},
+     year = 1994,
+    month = may,
+   volume = 268,
+    pages = {173},
+   adsurl = {http://adsabs.harvard.edu/abs/1994MNRAS.268..173C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Sugerman2012,
+   author = {{Sugerman}, B.~E.~K. and {Andrews}, J.~E. and {Barlow}, M.~J. and 
+	{Clayton}, G.~C. and {Ercolano}, B. and {Ghavamian}, P. and 
+	{Kennicutt}, Jr., R.~C. and {Krause}, O. and {Meixner}, M. and 
+	{Otsuka}, M.},
+    title = "{Thirty Years of SN 1980K: Evidence for Light Echoes}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1202.3075},
+ primaryClass = "astro-ph.SR",
+ keywords = {circumstellar matter, dust, extinction, methods: numerical, radiative transfer, supernovae: individual: SN 1980K},
+     year = 2012,
+    month = apr,
+   volume = 749,
+      eid = {170},
+    pages = {170},
+      doi = {10.1088/0004-637X/749/2/170},
+   adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...749..170S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Fesen1990,
+   author = {{Fesen}, R.~A. and {Becker}, R.~H.},
+    title = "{Optical detection of the remnant of SN 1980K in NGC 6946}",
+  journal = {\apj},
+ keywords = {Optical Emission Spectroscopy, Spiral Galaxies, Supernova Remnants, H Alpha Line, Nebulae},
+     year = 1990,
+    month = mar,
+   volume = 351,
+    pages = {437-442},
+      doi = {10.1086/168480},
+   adsurl = {http://adsabs.harvard.edu/abs/1990ApJ...351..437F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Fesen1999,
+   author = {{Fesen}, R.~A. and {Gerardy}, C.~L. and {Filippenko}, A.~V. and 
+	{Matheson}, T. and {Chevalier}, R.~A. and {Kirshner}, R.~P. and 
+	{Schmidt}, B.~P. and {Challis}, P. and {Fransson}, C. and {Leibundgut}, B. and 
+	{van Dyk}, S.~D.},
+    title = "{Late-Time Optical and Ultraviolet Spectra of SN 1979C and SN 1980K}",
+  journal = {\aj},
+   eprint = {astro-ph/9810407},
+ keywords = {GALAXIES: INDIVIDUAL: NGC NUMBER: NGC 4321, GALAXIES: INDIVIDUAL: NGC NUMBER: NGC 6946, STARS: SUPERNOVAE: INDIVIDUAL: ALPHANUMERIC: SN 1979C, STARS: SUPERNOVAE: INDIVIDUAL: ALPHANUMERIC: SN 1980K},
+     year = 1999,
+    month = feb,
+   volume = 117,
+    pages = {725-735},
+      doi = {10.1086/300751},
+   adsurl = {http://adsabs.harvard.edu/abs/1999AJ....117..725F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Fesen1995,
+   author = {{Fesen}, R.~A. and {Hurford}, A.~P. and {Matonick}, D.~M.},
+    title = "{Continued Monitoring of the Late-Time Optical Emission from SN 1980K}",
+  journal = {\aj},
+ keywords = {SUPERNOVAE: INDIVIDUAL: SN 1980K},
+     year = 1995,
+    month = jun,
+   volume = 109,
+    pages = {2608},
+      doi = {10.1086/117473},
+   adsurl = {http://adsabs.harvard.edu/abs/1995AJ....109.2608F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Fesen1994,
+   author = {{Fesen}, R.~A. and {Matonick}, D.~M.},
+    title = "{The late-time optical spectrum of SN 1980K}",
+  journal = {\apj},
+ keywords = {Line Spectra, Stellar Evolution, Stellar Spectrophotometry, Supernovae, Calcium, Ferric Ions, H Alpha Line, Oxygen, Oxygen Ions},
+     year = 1994,
+    month = jun,
+   volume = 428,
+    pages = {157-165},
+      doi = {10.1086/174228},
+   adsurl = {http://adsabs.harvard.edu/abs/1994ApJ...428..157F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Montes1998,
+   author = {{Montes}, M.~J. and {Van Dyk}, S.~D. and {Weiler}, K.~W. and 
+	{Sramek}, R.~A. and {Panagia}, N.},
+    title = "{Radio Observations of SN 1980K: Evidence for Rapid Presupernova Evolution}",
+  journal = {\apj},
+   eprint = {astro-ph/9802296},
+ keywords = {RADIO CONTINUUM: STARS, STARS: EVOLUTION, STARS: SUPERNOVAE: INDIVIDUAL: ALPHANUMERIC: SN 1980K, Radio Continuum: Stars, Stars: Evolution, Stars: Supernovae: Individual: Alphanumeric: SN 1980K},
+     year = 1998,
+    month = oct,
+   volume = 506,
+    pages = {874-879},
+      doi = {10.1086/306261},
+   adsurl = {http://adsabs.harvard.edu/abs/1998ApJ...506..874M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Dwek1983b,
+   author = {{Dwek}, E.},
+    title = "{The infrared echo of a type II supernova with a circumstellar dust shell - Applications to SN 1979c and SN 1980k}",
+  journal = {\apj},
+ keywords = {Infrared Astronomy, Stellar Envelopes, Supernovae, Thermal Emission, Cosmic Dust, Light Curve, Stellar Models, Stellar Spectrophotometry},
+     year = 1983,
+    month = nov,
+   volume = 274,
+    pages = {175-183},
+      doi = {10.1086/161435},
+   adsurl = {http://adsabs.harvard.edu/abs/1983ApJ...274..175D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Dwek1983,
+   author = {{Dwek}, E. and {A'Hearn}, M.~F. and {Becklin}, E.~E. and {Brown}, R.~H. and 
+	{Capps}, R.~W. and {Dinerstein}, H.~L. and {Gatley}, I. and 
+	{Morrison}, D. and {Telesco}, C.~M. and {Tokunaga}, A.~T. and 
+	{Werner}, M.~W. and {Wynn-Williams}, C.~G.},
+    title = "{The evolution of the infrared emission from the Type II supernova 1980k in NGC 6946 - The dust formation model}",
+  journal = {\apj},
+ keywords = {Astronomical Models, Cosmic Dust, Infrared Radiation, Spiral Galaxies, Stellar Evolution, Supernovae, Astronomical Photometry, Cosmology, Stellar Atmospheres, Thermal Emission},
+     year = 1983,
+    month = nov,
+   volume = 274,
+    pages = {168-174},
+      doi = {10.1086/161434},
+   adsurl = {http://adsabs.harvard.edu/abs/1983ApJ...274..168D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{Fesen1988,
+   author = {{Fesen}, R.~A. and {Becker}, R.~H.},
+    title = "{Optical Detection of the Remnant of SN 1980K in NGC 6946}",
+booktitle = {Bulletin of the American Astronomical Society},
+     year = 1988,
+   series = {Bulletin of the American Astronomical Society},
+   volume = 20,
+    month = sep,
+    pages = {962},
+   adsurl = {http://adsabs.harvard.edu/abs/1988BAAS...20..962F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Barbon1982,
+   author = {{Barbon}, R. and {Ciatti}, F. and {Rosino}, L.},
+    title = "{Two bright supernovae in NGC 6946 and NGC 4536}",
+  journal = {\aap},
+ keywords = {Light Curve, Stellar Color, Stellar Magnitude, Stellar Spectra, Supernovae, Astronomical Photography, Emission Spectra, Galactic Nuclei, Line Spectra, Spiral Galaxies, Star Distribution},
+     year = 1982,
+    month = dec,
+   volume = 116,
+    pages = {35-42},
+   adsurl = {http://adsabs.harvard.edu/abs/1982A%26A...116...35B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Buta1982,
+   author = {{Buta}, R.~J.},
+    title = "{Photometric observations of the bright Type II supernova 1980K in NGC 6946}",
+  journal = {\pasp},
+ keywords = {Light Curve, Stellar Spectra, Stellar Spectrophotometry, Supernovae, Ubv Spectra, Electrophotometry, Stellar Color},
+     year = 1982,
+    month = jun,
+   volume = 94,
+    pages = {578-585},
+      doi = {10.1086/131026},
+   adsurl = {http://adsabs.harvard.edu/abs/1982PASP...94..578B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Karachentsev2000,
+   author = {{Karachentsev}, I.~D. and {Sharina}, M.~E. and {Huchtmeier}, W.~K.
+	},
+    title = "{A group of galaxies around the giant spiral NGC 6946}",
+  journal = {\aap},
+   eprint = {astro-ph/0010148},
+ keywords = {GALAXIES: DWARF, GALAXIES: INDIVIDUAL: NGC 6946, GALAXIES: PHOTOMETRY},
+     year = 2000,
+    month = oct,
+   volume = 362,
+    pages = {544-556},
+   adsurl = {http://adsabs.harvard.edu/abs/2000A%26A...362..544K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{Nomoto1993,
    author = {{Nomoto}, K. and {Suzuki}, T. and {Shigeyama}, T. and {Kumagai}, S. and 
 	{Yamaoka}, H. and {Saio}, H.},
