ch 5 almost complete

--- a/thesis/front/acknowledgements.tex
+++ b/thesis/front/acknowledgements.tex
@@ -32,9 +32,9 @@ Mike;  my luck in counting you as my friends is beyond words.  I know that every
 
 \noindent To Alex;  over the last three years I have watched you become a man, and one of the best.  I could not be prouder to call you my brother.  Knowing that you are always there for me, regardless of circumstance, means more to me than I can say. 
 
-\bigskip
-
-\noindent To Nick;  you are my rock. You have been there for me in my darkest moments and my best.  I cannot imagine having done this without you, and I have so many memories that I will cherish for the rest of my life.  You got me through this, as you get me through so much of my life.  You brighten every day and I am ever grateful.
+%\bigskip
+%
+%\noindent To Nick;  you are my rock. You have been there for me in my darkest moments and my best.  I cannot imagine having done this without you, and I have so many memories that I will cherish for the rest of my life.  You got me through this, as you get me through so much of my life.  You brighten every day and I am ever grateful.
 
 \bigskip
 
