minor updates to ch5

--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,3 +1,14 @@
+@article{Tran1997,
+  author = {Hien D. Tran and Alexei V. Filippenko and Gary D. Schmidt and Karen S. Bjorkman and Buell T. Jannuzi and Paul S. Smith},
+ journal = {Publications of the Astronomical Society of the Pacific},
+ number = {735},
+ pages = {489-503},
+ publisher = {The University of Chicago Press},
+ title = {Probing the Geometry and Circumstellar Environment of SN 1993J in M81},
+ volume = {109},
+ year = {1997}
+}
+
 
 @ARTICLE{Chugai1994,
    author = {{Chugai}, N.~N. and {Danziger}, I.~J.},
